--- a/package.json
+++ b/package.json
@@ -11,5 +11,14 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1"
+  },
+  "devDependencies": {
+    "xo": "^0.17.0"
+    },
+  "xo": {
+      "space": true,
+      "rules": {
+        "space-before-function-paren": ["error", "never"]
+      }
   }
 }
