refactor put to update task in database instead of temp data

--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
       "space-before-function-paren": [
         "error",
         "never"
+      ],
+      "no-trailing-spaces": [
+        2,
+        {
+          "skipBlankLines": true
+        }
       ]
     }
   }
