--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "25",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test nodemon --exec 'mocha --recursive -R min'"
   },
   "author": "Stephanie Concepcion",
   "license": "ISC",
@@ -19,6 +19,8 @@
     "passport-local-mongoose": "^4.0.0"
   },
   "devDependencies": {
+    "mocha": "^3.2.0",
+    "supertest": "^3.0.0",
     "xo": "^0.17.0"
   },
   "xo": {
@@ -34,7 +36,8 @@
           "skipBlankLines": true
         }
       ],
-      "no-prototype-builtins": 0
+      "no-prototype-builtins": 0,
+      "keyword-spacing": ["error", { "after": false }]
     }
   }
 }
