--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^4.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "serve-favicon": "^2.4.1"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
@@ -37,12 +38,19 @@
         }
       ],
       "no-prototype-builtins": 0,
-      "keyword-spacing": ["error", {
-        "overrides": {
-          "if": { "after": false },
-          "else": { "after": false }
+      "keyword-spacing": [
+        "error",
+        {
+          "overrides": {
+            "if": {
+              "after": false
+            },
+            "else": {
+              "after": false
+            }
+          }
         }
-      }]
+      ]
     }
   }
 }
