--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "connect-mongo": "^1.3.2",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "moment": "^2.17.1",
