--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-mongo": "^1.3.2",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
+    "history": "^4.6.1",
     "moment": "^2.17.1",
     "mongoose": "^4.8.1",
     "passport": "^0.3.2",
