--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Stephanie Concepcion",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.6.4",
+    "angular-animate": "^1.6.4",
+    "angular-ui-router": "^0.4.2",
     "body-parser": "^1.16.0",
     "connect-mongo": "^1.3.2",
     "express": "^4.14.1",
@@ -22,8 +25,13 @@
     "serve-favicon": "^2.4.1"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "mocha": "^3.2.0",
     "supertest": "^3.0.0",
+    "webpack": "^2.4.1",
     "xo": "^0.17.0"
   },
   "xo": {
